# mtfd

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: alignment.h  aoclock.h  aocsingleton.h  aocthread.h  common.h  config.h  detectionresult.h  domtfd.h  eupulogger.h  eupulogger4system.h  face_crop.h  fd.h  fdstatistics.h  fdthread.h  vipl_struct.h  workbasethread.h
release/: conf.json  pack.sh  readme.txt
release/model/: readme.txt
src/: alignment.cc  aoclock.cc  aocthread.cc  config.cc  detectionresult.cc  domtfd.cc  eupulogger.cc  eupulogger4system.cc  face_crop.cc  fd.cc  fdstatistics.cc  fdthread.cc  main.cc  pywrap.cc  workbasethread.cc
stcrop/: setup.py
stcrop/facecrop/: client.py
